# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing-0.1.0-py3-none-any.whl  a_maze_ing.py  amazing_banner.txt  config.txt  config.txt   config_parser.py  draw_maze.py  f_p.sh  gitpsh.sh  goodby_banner.txt  header.py  headers.py  llllll.py  maze.txt  maze2hex.py  pyproject.toml  read.md  requirements.txt  test.py  test2.py
mazegen/: _42_cells.py  _cell.py  colors.py  config_parser.py  draw_maze.py  generate_maze.py  headers.py
