[project]
name = "a-maze-ing"
version = "0.1.0"
description = ""
authors = [
    {name = "YAIT-OUG, ILHAKAM"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "build (>=1.4.2,<2.0.0)"
]

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
